src/components/About/about.module.scss
$nav-color: #dcd9c6;
$hover-color: #1c5c77;
// $active-color: #c97064;
$active-color: #d84936;
$black-color: #1b1924;
.about {
  height: 81.5vh;
  display: flex;
  align-items: center;
}
.aboutHead {
  display: flex;
}
.quoteBox {
  width: 100%;
  margin: 0%;
  padding: 1rem 0.6rem;
  color: $black-color;
  h1 {
    font-size: 1rem;
    margin: 0rem;
    h5 {
      margin: 0rem;
      margin-top: 5px;
    }
  }
}
.nameContent {
  display: flex;
  width: 100%;
  .line {
    border: 1px solid $black-color;
    margin: 0rem 1rem;
  }
  .intro {
    width: 81%;
    font-size: 2em;
    color: $black-color;
    margin: 0%;
    display: flex;
    align-items: center;
    margin-bottom: 1rem;
    .myNameFirst {
      font-size: 1.25em;
      color: $active-color;
      margin: 0%;
      margin-left: 0.5rem;
    }
  }

  a {
    margin-right: 3px;
    color: $hover-color;
  }
  p {
    line-height: 35px;
    flex-grow: 1;
    margin: 0%;
    margin-bottom: 1em;
    font-size: 1.1em;
    vertical-align: middle;
  }
  .photoBox {
    display: flex;
    align-items: center;
  }
  .photo {
    border: 5px solid $hover-color;
    padding: 0px;
    margin: 0px;
  }
}

.imageOne {
  border: 3px solid $black-color;
  width: 50%;
  margin: 0%;
}

.pA {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  color: $black-color;
  h1 {
    margin: 0%;
  }
}

.contactBox {
  background-color: $black-color;
  color: $nav-color;
  display: flex;
  flex-direction: column;
  padding: 0.6rem 1rem;
  h1 {
    margin: 0rem;
    font-size: 1em;
  }
  .contact {
    outline: none;
    background-color: transparent;
    border: 3px solid $nav-color;
    margin: 0%;
    margin-top: 0.6rem;
    width: 50%;
    color: $nav-color;
    font-size: 1.6rem;
    height: 2.5rem;
    transition: all ease 0.3s;
  }
  .contact:hover {
    cursor: pointer;
    background-color: $nav-color;
    color: $black-color;
  }
}

